<resources>
    <string name="app_name">Valorant Wiki</string>
    <string name="agentes">Agents</string>
    <string name="mapas">Maps</string>
    <string name="armas">Weapons</string>
    <string name="todos">all</string>
    <string name="iniciador">initiator</string>
    <string name="controlador">controller</string>
    <string name="sentinela">sentinel</string>
    <string name="duelista">duelist</string>
    <string name="linguagem">en-US</string>
    <string name="botao_voltar">back button</string>
    <string name="classe">Class</string>
    <string name="descricao">Description</string>
    <string name="habilidades">Abilities</string>
    <string name="minimapa">MiniMap</string>
    <string name="locais">Places</string>
    <string name="local">Place:</string>
    <string name="regiao">Region:</string>
    <string name="nao_tem_minimapa">This map  has no minimap!</string>
    <string name="algo_de_errado_aconteceu">Something has wrong!!</string>
    <string name="recarregar">Refresh</string>
    <string name="Pesquisar">Search</string>
    <string name="activity_weapon_category_title">Category:</string>
    <string name="activity_weapon_cost_title">Cost:</string>
    <string name="activity_weapon_fire_rate_title">Fire Rate:</string>
    <string name="activity_weapon_run_speed_title">Run Speed:</string>
    <string name="activity_weapon_equip_speed_title">Equip Speed:</string>
    <string name="activity_weapon_reload_speed_title">Reload Speed:</string>
    <string name="activity_weapon_magazine_title">Magazine:</string>
    <string name="item_damage_range_head_title">Head:</string>
    <string name="item_damage_range_body_title">Body:</string>
    <string name="item_damage_range_legs_title">Legs:</string>
    <string name="activity_weapon_damage_title">Damage</string>
    <string name="activity_weapon_show_skins_button_text">Show Skins</string>
    <string name="activity_weapon_fire_rate_format">%.2f rds/sec</string>
    <string name="activity_weapon_run_speed_format">%.2f m/sec</string>
    <string name="activity_weapon_equip_speed_format">%.2f sec</string>
    <string name="activity_weapon_reload_speed_format">%.2f sec</string>
    <string name="activity_weapon_magazine_format">%d rds</string>
    <string name="item_damage_range_format" translatable="false">%1s-%2sm</string>
    <string name="item_damage_range_damage_format" translatable="false">%.2f</string>
    <string name="bottom_sheet_skins_title" translatable="false">Skins</string>
    <string name="tab_layout_for_alternates_between_screens">Tab layout for alternates between screens</string>
    <string name="standard_key">standard</string>
    <string name="favorite_key">favorite</string>
    <string name="activity_map_gallery_title">Gallery</string>
    <string name="activity_map_button_show_gallery">Show Gallery</string>
    <string name="tablayout_map_gallery_dot_indicator">Gallery dot indicator</string>

</resources>