<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activities.weapon.WeaponActivity"
    android:background="@color/white_valorant">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/progressbar_weapon_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_valorant"
        android:elevation="@dimen/cardview_default_elevation"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible"
            tools:visibility="visible"
            android:elevation="10dp"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:backgroundTint="@color/invisible"
        android:background="@color/white_valorant"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/invisible"
            app:contentScrim="@color/invisible"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
            app:titleEnabled="false"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_toolbar_weapon_activity"
                android:layout_width="match_parent"
                android:layout_height="390dp"
                android:layout_marginTop="-40dp"
                app:cardCornerRadius="32dp"
                app:cardPreventCornerOverlap="true"
                app:cardBackgroundColor="@color/red_valorant">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageview_portrait_weapon_activity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:translationZ="@dimen/cardview_default_elevation"/>

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/imagebutton_back_weapon_activity"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="40dp"
                        android:backgroundTint="@color/invisible"
                        android:contentDescription="@string/botao_voltar"
                        android:src="@drawable/ic_arrow_back"
                        android:tint="@color/white_valorant"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="68dp"
                        android:layout_margin="@dimen/default_margin"
                        app:cardCornerRadius="@dimen/default_radius"
                        app:cardElevation="@dimen/cardview_default_elevation"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/textview_name_weapon_activity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="42dp"
                            android:fontFamily="@font/roboto_bold_italic"
                            android:textColor="@color/black"
                            android:textSize="@dimen/big_text_size"
                            android:textStyle="bold"
                            tools:text="Vandal" />
                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_shop_informations"
                style="@style/DefaultCardView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardBackgroundColor="@color/white_valorant"
                >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/default_vertical_margin"
                    >
                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TitleTextView"
                        android:id="@+id/_weapon_category_title"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_margin="@dimen/default_margin"
                        android:text="@string/activity_weapon_category_title"
                        />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textview_category_weapon_activity"
                        style="@style/InformationTextView"
                        app:layout_constraintTop_toTopOf="@id/_weapon_category_title"
                        app:layout_constraintStart_toEndOf="@id/_weapon_category_title"
                        app:layout_constraintBottom_toBottomOf="@id/_weapon_category_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.1"
                        tools:text="Assault Rifles"
                       />
                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TitleTextView"
                        android:id="@+id/_weapon_cost_title"
                        app:layout_constraintTop_toBottomOf="@id/_weapon_category_title"
                        app:layout_constraintStart_toStartOf="@id/_weapon_category_title"
                        android:text="@string/activity_weapon_cost_title"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textview_cost_weapon_activity"
                        style="@style/InformationTextView"
                        app:layout_constraintTop_toTopOf="@id/_weapon_cost_title"
                        app:layout_constraintStart_toEndOf="@id/_weapon_cost_title"
                        app:layout_constraintBottom_toBottomOf="@id/_weapon_cost_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.1"
                        tools:text="2900"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_weapon_informations"
                style="@style/DefaultCardView"
                app:layout_constraintTop_toBottomOf="@id/cardview_shop_informations"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardBackgroundColor="@color/white_valorant">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/default_vertical_margin">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/_weapon_fire_rate_title"
                        style="@style/TitleTextView"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_margin="@dimen/default_margin"
                        android:text="@string/activity_weapon_fire_rate_title"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textview_fire_rate_weapon_activity"
                        style="@style/InformationTextView"
                        app:layout_constraintTop_toTopOf="@id/_weapon_fire_rate_title"
                        app:layout_constraintStart_toEndOf="@id/_weapon_fire_rate_title"
                        app:layout_constraintBottom_toBottomOf="@id/_weapon_fire_rate_title"
                        tools:text="9.75 rds/sec"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.8"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/_weapon_run_speed_title"
                        style="@style/TitleTextView"
                        app:layout_constraintTop_toBottomOf="@id/_weapon_fire_rate_title"
                        app:layout_constraintStart_toStartOf="@id/_weapon_fire_rate_title"
                        android:text="@string/activity_weapon_run_speed_title"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textview_run_speed_weapon_activity"
                        style="@style/InformationTextView"
                        app:layout_constraintStart_toEndOf="@id/_weapon_run_speed_title"
                        app:layout_constraintTop_toTopOf="@id/_weapon_run_speed_title"
                        app:layout_constraintBottom_toBottomOf="@id/_weapon_run_speed_title"
                        tools:text="0.8 m/sec"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.8"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/_weapon_equip_speed_title"
                        style="@style/TitleTextView"
                        app:layout_constraintTop_toBottomOf="@id/_weapon_run_speed_title"
                        app:layout_constraintStart_toStartOf="@id/_weapon_run_speed_title"
                        android:text="@string/activity_weapon_equip_speed_title"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textview_equip_speed_weapon_activity"
                        style="@style/InformationTextView"
                        app:layout_constraintTop_toTopOf="@id/_weapon_equip_speed_title"
                        app:layout_constraintStart_toEndOf="@id/_weapon_equip_speed_title"
                        app:layout_constraintBottom_toBottomOf="@id/_weapon_equip_speed_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.8"
                        tools:text="1 sec"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/_weapon_reload_speed_title"
                        style="@style/TitleTextView"
                        app:layout_constraintTop_toBottomOf="@id/_weapon_equip_speed_title"
                        app:layout_constraintStart_toStartOf="@id/_weapon_equip_speed_title"
                        android:text="@string/activity_weapon_reload_speed_title"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textview_reload_speed_weapon_activity"
                        style="@style/InformationTextView"
                        app:layout_constraintStart_toEndOf="@id/_weapon_reload_speed_title"
                        app:layout_constraintTop_toTopOf="@id/_weapon_reload_speed_title"
                        app:layout_constraintBottom_toBottomOf="@id/_weapon_reload_speed_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="2.5 sec"
                        app:layout_constraintHorizontal_bias="0.8"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/_weapon_magazine_title"
                        style="@style/TitleTextView"
                        app:layout_constraintTop_toBottomOf="@id/_weapon_reload_speed_title"
                        app:layout_constraintStart_toStartOf="@id/_weapon_reload_speed_title"
                        android:text="@string/activity_weapon_magazine_title"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textview_magazine_weapon_activity"
                        style="@style/InformationTextView"
                        app:layout_constraintTop_toTopOf="@id/_weapon_magazine_title"
                        app:layout_constraintStart_toEndOf="@id/_weapon_magazine_title"
                        tools:text="25 rds"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.8"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_damage_informations"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/DefaultCardView"
                app:cardBackgroundColor="@color/white_valorant"
                app:layout_constraintTop_toBottomOf="@id/cardview_weapon_informations">
                <androidx.appcompat.widget.LinearLayoutCompat
                    style="@style/MatchWrap"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TitleTextView"
                        android:text="@string/activity_weapon_damage_title"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/default_vertical_margin"/>
                    <com.google.android.material.divider.MaterialDivider
                        style="@style/MatchWrap"
                        android:layout_marginHorizontal="@dimen/default_horizontal_margin"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerview_damage_ranges_weapon_activity"
                        style="@style/MatchWrap"
                        tools:listitem="@layout/damage_range_item"
                        tools:itemCount="2"
                        app:layout_constraintTop_toBottomOf="@id/cardview_weapon_informations"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_show_skins_weapon_activity"
                style="@style/DefaultButton"
                app:layout_constraintTop_toBottomOf="@id/cardview_damage_informations"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/activity_weapon_show_skins_button_text"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>