<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MapActivity"
    android:background="@color/white_valorant"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/progressbar_map_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_valorant"
        android:elevation="@dimen/cardview_default_elevation"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_valorant"
        android:backgroundTint="@color/invisible">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/invisible"
            app:contentScrim="@color/invisible"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
            app:titleEnabled="false">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="390dp"
                android:layout_marginTop="-40dp"
                app:cardCornerRadius="32dp"
                app:cardPreventCornerOverlap="true"
                >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageview_portrait_map_activity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        tools:src="@tools:sample/backgrounds/scenic"/>
                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/imagebutton_back_map_activity"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="40dp"
                        android:src="@drawable/ic_arrow_back"
                        android:backgroundTint="@color/invisible"
                        android:tint="@color/white_valorant"
                        android:contentDescription="@string/botao_voltar"/>
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="68dp"
                        android:layout_margin="16dp"
                        app:cardCornerRadius="24dp"
                        app:cardElevation="4dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent">
                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/textview_name_map_activity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="42dp"
                            android:fontFamily="@font/roboto_bold_italic"
                            tools:text="Ascent"
                            android:textStyle="bold"
                            android:textSize="42sp"
                            android:textColor="@color/black"/>
                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/minimap_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                android:text="@string/minimapa"
                android:layout_margin="16dp"
                android:textColor="@color/red_valorant"
                android:textSize="32sp"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_bold_italic"
                />
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_minimap"
                android:layout_width="0dp"
                android:layout_height="320dp"
                app:layout_constraintTop_toBottomOf="@id/minimap_title"
                app:layout_constraintStart_toStartOf="@id/minimap_title"
                app:layout_constraintBottom_toTopOf="@id/places_title"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="16dp"
                android:elevation="@dimen/cardview_default_elevation"
                android:layout_marginVertical="8dp"
                android:backgroundTint="@color/white_valorant">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageview_minimap_map_activity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
            </androidx.cardview.widget.CardView>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/places_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cardview_minimap"
                app:layout_constraintStart_toStartOf="@id/minimap_title"
                android:textColor="@color/red_valorant"
                android:textSize="32sp"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_bold_italic"
                android:text="@string/locais"
                android:layout_marginTop="8dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_places_map_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/places_title"
                android:layout_marginTop="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>